исправить методы работы с абзацами и тегами, написать для них тесты